force-app/main/default/objects/msf_Associative__c/msf_Associative__c.object-meta.xml
<CustomObject>
    <label>Asociativo</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Número asociado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asociativos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>