force-app/main/default/objects/msf_Associative__c/fields/msf_AcceptDataProtectionPolicy__c.field-meta.xml
<CustomField>
    <fullName>msf_AcceptDataProtectionPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Política protección de datos</label>
    <type>Checkbox</type>
</CustomField>