force-app/main/default/objects/msf_Associative__c/fields/msf_AcceptStatutes__c.field-meta.xml
<CustomField>
    <fullName>msf_AcceptStatutes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conozco y acepto mis obligaciones</label>
    <type>Checkbox</type>
</CustomField>