force-app/main/default/objects/msf_Associative__c/fields/msf_AplicationNumberSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_AplicationNumberSAP__c</fullName>
    <inlineHelpText>Applicant Number PB</inlineHelpText>
    <label>Número de solicitante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>