force-app/main/default/objects/msf_Associative__c/fields/msf_AssociatedMarkSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_AssociatedMarkSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca asociativo</label>
    <type>Checkbox</type>
</CustomField>