force-app/main/default/objects/msf_Associative__c/fields/msf_BirthdateSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_BirthdateSAP__c</fullName>
    <label>Fecha nacimiento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>