force-app/main/default/objects/msf_Associative__c/fields/msf_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>msf_CancellationReason__c</fullName>
    <label>Motivo de baja</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desconectado de la asociación</fullName>
            </value>
            <value>
                <fullName>Desacuerdo con las posiciones / decisiones adoptadas por la asociación</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Enlace a otra asociación de MSF</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de los estatutos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>