force-app/main/default/objects/msf_Associative__c/fields/msf_ContactId__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asociativos</relationshipLabel>
    <relationshipName>Asociativos</relationshipName>
    <type>Lookup</type>
</CustomField>