force-app/main/default/objects/msf_Associative__c/fields/msf_CostCenterSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_CostCenterSAP__c</fullName>
    <label>Centro de coste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>