force-app/main/default/objects/msf_Associative__c/fields/msf_DetailCancelationReason__c.field-meta.xml
<CustomField>
    <fullName>msf_DetailCancelationReason__c</fullName>
    <label>Detalle de baja</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>