force-app/main/default/objects/msf_Associative__c/fields/msf_EmailSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_EmailSAP__c</fullName>
    <label>Correo electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>