force-app/main/default/objects/msf_Associative__c/fields/msf_EndDateAssociative__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDateAssociative__c</fullName>
    <label>Fecha final asociativo</label>
    <type>Date</type>
</CustomField>