force-app/main/default/objects/msf_Associative__c/fields/msf_EndDateAssociativeSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDateAssociativeSAP__c</fullName>
    <label>Fecha final asociativo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>