force-app/main/default/objects/msf_Associative__c/fields/msf_EndDateWorkerSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDateWorkerSAP__c</fullName>
    <label>Fecha de fin como trabajador</label>
    <length>10</length>
    <type>Text</type>
</CustomField>