force-app/main/default/objects/msf_Associative__c/fields/msf_FieldExperience__c.field-meta.xml
<CustomField>
    <fullName>msf_FieldExperience__c</fullName>
    <label>Experiencia en terreno</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>