force-app/main/default/objects/msf_Associative__c/fields/msf_FieldExperienceSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_FieldExperienceSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencia en el terreno con OCBA</label>
    <type>Checkbox</type>
</CustomField>