force-app/main/default/objects/msf_Associative__c/fields/msf_FieldExperienceYearsSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_FieldExperienceYearsSAP__c</fullName>
    <label>Años de experiencia en terreno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>