force-app/main/default/objects/msf_Associative__c/fields/msf_FirstAssociativeEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstAssociativeEmail__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>