force-app/main/default/objects/msf_Associative__c/fields/msf_FirstNameSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstNameSAP__c</fullName>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>