force-app/main/default/objects/msf_Associative__c/fields/msf_GenderSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_GenderSAP__c</fullName>
    <label>Género</label>
    <length>255</length>
    <type>Text</type>
</CustomField>