force-app/main/default/objects/msf_Associative__c/fields/msf_IsFieldSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFieldSAP__c</fullName>
    <formula>BEGINS(msf_JobSAP__c , &apos;F -&apos;) 
||
BEGINS(msf_CostCenterSAP__c , &apos;ES&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actualmente en terreno</label>
    <type>Checkbox</type>
</CustomField>