force-app/main/default/objects/msf_Associative__c/fields/msf_isInternationalStaff__c.field-meta.xml
<CustomField>
    <fullName>msf_isInternationalStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal internacional</label>
    <type>Checkbox</type>
</CustomField>