force-app/main/default/objects/msf_Associative__c/fields/msf_IsSanitary__c.field-meta.xml
<CustomField>
    <fullName>msf_IsSanitary__c</fullName>
    <formula>ISPICKVAL(msf_ProfessionAreas__c, &apos;Ciencias de la Salud y Servicios Sociales&apos;) &amp;&amp;
(
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Medicina&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Farmacia&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Psicología&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Enfermería&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Matronas&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Odontología&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Fisioterapia&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Nutrición&apos;) ||
  ISPICKVAL(msf_ProfessionSubAreas__c, &apos;Técnicos Superiores en Laboratorio de diagnóstico Clínico&apos;)    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es sanitario</label>
    <type>Checkbox</type>
</CustomField>