force-app/main/default/objects/msf_Associative__c/fields/msf_IsSanitaryManual__c.field-meta.xml
<CustomField>
    <fullName>msf_IsSanitaryManual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es sanitario (manual)</label>
    <type>Checkbox</type>
</CustomField>