force-app/main/default/objects/msf_Associative__c/fields/msf_isVolunteerStaff__c.field-meta.xml
<CustomField>
    <fullName>msf_isVolunteerStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal voluntario</label>
    <type>Checkbox</type>
</CustomField>