force-app/main/default/objects/msf_Associative__c/fields/msf_JobSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_JobSAP__c</fullName>
    <label>Trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>