force-app/main/default/objects/msf_Associative__c/fields/msf_LanguagePreferer__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguagePreferer__c</fullName>
    <label>Lenguaje de preferencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>