force-app/main/default/objects/msf_Associative__c/fields/msf_LastNameSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_LastNameSAP__c</fullName>
    <label>Apellido 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>