force-app/main/default/objects/msf_Associative__c/fields/msf_MemberMeetingEndDate__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberMeetingEndDate__c</fullName>
    <label>Fecha fin miembro en junta</label>
    <type>Date</type>
</CustomField>