force-app/main/default/objects/msf_Associative__c/fields/msf_MemberMeetingPosition__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberMeetingPosition__c</fullName>
    <label>Cargo miembro en junta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>