force-app/main/default/objects/msf_Associative__c/fields/msf_MemberMeetingStartDate__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberMeetingStartDate__c</fullName>
    <label>Fecha inicio miembro en junta</label>
    <type>Date</type>
</CustomField>