force-app/main/default/objects/msf_Associative__c/fields/msf_MoreInfo__c.field-meta.xml
<CustomField>
    <fullName>msf_MoreInfo__c</fullName>
    <label>Más Información</label>
    <type>TextArea</type>
</CustomField>