force-app/main/default/objects/msf_Associative__c/fields/msf_MSFExperience__c.field-meta.xml
<CustomField>
    <fullName>msf_MSFExperience__c</fullName>
    <label>Experiencia en MSF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>