force-app/main/default/objects/msf_Associative__c/fields/msf_MSFExperienceSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_MSFExperienceSAP__c</fullName>
    <label>Último cargo ocupado en MSF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>