force-app/main/default/objects/msf_Associative__c/fields/msf_NationalitySAP__c.field-meta.xml
<CustomField>
    <fullName>msf_NationalitySAP__c</fullName>
    <label>Nacionalidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>