force-app/main/default/objects/msf_Associative__c/fields/msf_NoCriminalRecord__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCriminalRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No antecedentes penales</label>
    <type>Checkbox</type>
</CustomField>