force-app/main/default/objects/msf_Associative__c/fields/msf_NoReceiveAbaInPaper__c.field-meta.xml
<CustomField>
    <fullName>msf_NoReceiveAbaInPaper__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No recibir àbá en papel</label>
    <type>Checkbox</type>
</CustomField>