force-app/main/default/objects/msf_Associative__c/fields/msf_OCBAEndDateSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_OCBAEndDateSAP__c</fullName>
    <inlineHelpText>Fecha de fin de contrato.</inlineHelpText>
    <label>OCBA fecha fin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>