force-app/main/default/objects/msf_Associative__c/fields/msf_OCBAStartDateSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_OCBAStartDateSAP__c</fullName>
    <inlineHelpText>fecha de alta como trabajador en SAP</inlineHelpText>
    <label>OCBA fecha de inicio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>