force-app/main/default/objects/msf_Associative__c/fields/msf_OrganizationUnitSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_OrganizationUnitSAP__c</fullName>
    <label>Unidad de la Organización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>