force-app/main/default/objects/msf_Associative__c/fields/msf_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>msf_PaymentMethod__c</fullName>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domiciliación bancaria</fullName>
            </value>
            <value>
                <fullName>Tarjeta de crédito o débito</fullName>
            </value>
            <value>
                <fullName>ACMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>