force-app/main/default/objects/msf_Associative__c/fields/msf_PersonalAreaSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_PersonalAreaSAP__c</fullName>
    <inlineHelpText>Personnel Area. En qué oficina se ubica el asociado.</inlineHelpText>
    <label>Oficina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>