force-app/main/default/objects/msf_Associative__c/fields/msf_PersonalNumberSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_PersonalNumberSAP__c</fullName>
    <inlineHelpText>Personnel Number PA</inlineHelpText>
    <label>Número de trabajador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>