force-app/main/default/objects/msf_Associative__c/fields/msf_PersonalSubAreaSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_PersonalSubAreaSAP__c</fullName>
    <inlineHelpText>Personnel subarea</inlineHelpText>
    <label>Perfil personal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>