force-app/main/default/objects/msf_Associative__c/fields/msf_PositionSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_PositionSAP__c</fullName>
    <label>Posición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>