force-app/main/default/objects/msf_Associative__c/fields/msf_ProfessionAreas__c.field-meta.xml
<CustomField>
    <fullName>msf_ProfessionAreas__c</fullName>
    <label>Areas de profesiones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ciencias Sociales, del comportamiento, de la comunicación, Administración, Trabajo y Derecho</fullName>
            </value>
            <value>
                <fullName>Ingeniería, Tecnología, Industria, Arquitectura y Construcción</fullName>
            </value>
            <value>
                <fullName>Ciencias de la Salud y Servicios Sociales</fullName>
            </value>
            <value>
                <fullName>Artes y Humanidades</fullName>
            </value>
            <value>
                <fullName>Ciencias de la Vida, de la Tierra, del Espacio, Química, Física y Exactas</fullName>
            </value>
            <value>
                <fullName>Servicios: Turismo, Hostelería, Deportes, Belleza, Transporte, Medio Ambiente y Seguridad</fullName>
            </value>
            <value>
                <fullName>Pedagogía</fullName>
            </value>
            <value>
                <fullName>Agronomía, Agricultura, Ganadería, Pesca y Veterinaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>