force-app/main/default/objects/msf_Associative__c/fields/msf_ProfessionSubAreas__c.field-meta.xml
<CustomField>
    <fullName>msf_ProfessionSubAreas__c</fullName>
    <label>SubAreas de profesiones</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_ProfessionAreas__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administración y dirección de empresas</fullName>
            </value>
            <value>
                <fullName>Derecho</fullName>
            </value>
            <value>
                <fullName>Psicología</fullName>
            </value>
            <value>
                <fullName>Ciencias de la Comunicación-Periodismo</fullName>
            </value>
            <value>
                <fullName>Economía</fullName>
            </value>
            <value>
                <fullName>Ciencias Sociales</fullName>
            </value>
            <value>
                <fullName>Marketing y Publicidad</fullName>
            </value>
            <value>
                <fullName>Comercio, Administración y Trabajo</fullName>
            </value>
            <value>
                <fullName>Contabilidad y Gestión de Impuestos</fullName>
            </value>
            <value>
                <fullName>Antropología y Etnología</fullName>
            </value>
            <value>
                <fullName>Finanzas, Banca y Seguros</fullName>
            </value>
            <value>
                <fullName>Geografía</fullName>
            </value>
            <value>
                <fullName>Biblioteconomía y Documentación</fullName>
            </value>
            <value>
                <fullName>Ciencias Políticas</fullName>
            </value>
            <value>
                <fullName>Ciencias del Trabajo</fullName>
            </value>
            <value>
                <fullName>Sociología</fullName>
            </value>
            <value>
                <fullName>Secretariado y Trabajo Administrativo</fullName>
            </value>
            <value>
                <fullName>Ingeniería y Tecnología</fullName>
            </value>
            <value>
                <fullName>Informática</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Arquitectura y Construcción</fullName>
            </value>
            <value>
                <fullName>Delineación y Dibujo técnico</fullName>
            </value>
            <value>
                <fullName>Medicina</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Enfermería</fullName>
            </value>
            <value>
                <fullName>Matronas</fullName>
            </value>
            <value>
                <fullName>Odontología</fullName>
            </value>
            <value>
                <fullName>Fisioterapia</fullName>
            </value>
            <value>
                <fullName>Nutrición</fullName>
            </value>
            <value>
                <fullName>Técnicos Superiores en Laboratorio de diagnóstico Clínico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>