force-app/main/default/objects/msf_Associative__c/fields/msf_ResidenceSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_ResidenceSAP__c</fullName>
    <label>País de residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>