force-app/main/default/objects/msf_Associative__c/fields/msf_SalariedSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_SalariedSAP__c</fullName>
    <formula>!ISBLANK(msf_CostCenterSAP__c) &amp;&amp; !BEGINS(msf_CostCenterSAP__c , &apos;ES&apos;) &amp;&amp; !BEGINS(msf_CostCenterSAP__c , &apos;90&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asalariado</label>
    <type>Checkbox</type>
</CustomField>