force-app/main/default/objects/msf_Associative__c/fields/msf_SecondAssociativeEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_SecondAssociativeEmail__c</fullName>
    <label>Correo electrónico secundario</label>
    <type>Email</type>
</CustomField>