force-app/main/default/objects/msf_Associative__c/fields/msf_SecondNameSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_SecondNameSAP__c</fullName>
    <label>Apellido 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>