force-app/main/default/objects/msf_Associative__c/fields/msf_SeniorityMSFSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_SeniorityMSFSAP__c</fullName>
    <label>Antigüedad MSF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>