force-app/main/default/objects/msf_Associative__c/fields/msf_StartDateAssociative__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDateAssociative__c</fullName>
    <label>Fecha inicio asociativo</label>
    <type>Date</type>
</CustomField>