force-app/main/default/objects/msf_Associative__c/fields/msf_StartDateAssociativeSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDateAssociativeSAP__c</fullName>
    <label>Fecha inicio asociativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>