force-app/main/default/objects/msf_Associative__c/fields/msf_StartDateWorkerSAP__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDateWorkerSAP__c</fullName>
    <label>Fecha de inicio como trabajador</label>
    <length>10</length>
    <type>Text</type>
</CustomField>