force-app/main/default/objects/msf_Associative__c/fields/msf_Status__c.field-meta.xml
<CustomField>
    <fullName>msf_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Baja en proceso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>