force-app/main/default/objects/msf_Associative__c/fields/msf_TypologySAP__c.field-meta.xml
<CustomField>
    <fullName>msf_TypologySAP__c</fullName>
    <label>Tipología</label>
    <length>40</length>
    <type>Text</type>
</CustomField>