force-app/main/default/objects/msf_Associative__c/fields/msf_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>msf_Ubicacion__c</fullName>
    <label>Ubicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>Sede</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Delegaciones</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Terreno</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>España</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Extranjero</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>BCN</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>Personal nacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>