force-app/main/default/objects/msf_Associative__c/validationRules/Telefono_Asociativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefono_Asociativo</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(msf_AssociativePhone__c, &quot;[\\s\\d+()-]*&quot;)</errorConditionFormula>
    <errorDisplayField>msf_AssociativePhone__c</errorDisplayField>
    <errorMessage>Los caracteres permitidos son: &apos;0-9&apos;, &apos; &apos;, &apos;+&apos;, &apos;-&apos;, &apos;(&apos; y &apos;)&apos;.</errorMessage>
</ValidationRule>